# proxmark3

./: ARCHITECTURE.md  CMAKE_BUILD_INSTRUCTIONS.md  CMakeLists.txt  Makefile  Makefile.defs  Makefile.platform
armsrc/: CMakeLists.txt  Makefile  start.c
client/: Makefile  proxmark3_mcp.py
client/lualibs/: fmcos.lua
client/luascripts/: hf_fmcos.lua
client/pyscripts/: fmcos.py  fmcos_cli.py  fmcos_log.py
client/src/: cmdhf.c  cmdhffmcos.c  cmdhffmcos.h
client/src/fmcos/: fmcos.c  fmcos.h
common_fpga/: fpga.h
common_riscv/: Makefile.common  Makefile.hal  clocks.c  crt0.S  linker.ld  ticks.c  usb_cdc.c
common_riscv/sipeed_tang_nano_20k/: csr.csv
common_riscv/sipeed_tang_nano_20k/doc/: buttons.rst  conf.py  index.rst  interrupts.rst  leds.rst  sdram.rst  serial1.rst  serial2.rst  spiflash_core.rst  spiflash_phy.rst  timer1.rst  timer2.rst  uart.rst
common_riscv/sipeed_tang_nano_20k/doc/_build/doctrees/: buttons.doctree  counter.doctree  ctrl.doctree  environment.pickle  identifier_mem.doctree  index.doctree  interrupts.doctree  iso7816.doctree  leds.doctree  sdram.doctree  serial1.doctree  serial2.doctree  spiflash_core.doctree  spiflash_phy.doctree  timer0.doctree  timer1.doctree  timer2.doctree  uart.doctree
common_riscv/sipeed_tang_nano_20k/doc/_build/html/: objects.inv  searchindex.js
common_riscv/sipeed_tang_nano_20k/doc/_build/html/_sources/: buttons.rst.txt  counter.rst.txt  ctrl.rst.txt  identifier_mem.rst.txt  index.rst.txt  interrupts.rst.txt  iso7816.rst.txt  serial1.rst.txt  serial2.rst.txt  timer0.rst.txt  timer2.rst.txt
common_riscv/sipeed_tang_nano_20k/doc/doctrees/: buttons.doctree  ctrl.doctree  environment.pickle  interrupts.doctree  leds.doctree  sdram.doctree  serial1.doctree  serial2.doctree
common_riscv/sipeed_tang_nano_20k/gateware/: run.tcl  sipeed_tang_nano_20k.cst  sipeed_tang_nano_20k.sdc  sipeed_tang_nano_20k.v  sipeed_tang_nano_20k_bootrom.init  sipeed_tang_nano_20k_mem.init  sipeed_tang_nano_20k_rom.init
common_riscv/sipeed_tang_nano_20k/gateware/impl/gwsynthesis/: project.prj  project_syn_rsc.xml
common_riscv/sipeed_tang_nano_20k/gateware/impl/pnr/: cmd.do  device.cfg  project.binx  project.db  project.rpt.txt  project.timing_paths
common_riscv/sipeed_tang_nano_20k/software/include/: system.h
common_riscv/sipeed_tang_nano_20k/software/include/hw/: common.h
common_riscv/sipeed_tang_nano_20k/software/libc/: .ninja_deps  .ninja_log  build.ninja  cross.txt
common_riscv/sipeed_tang_nano_20k/software/libc/meson-logs/: meson-log.txt
common_riscv/sipeed_tang_nano_20k/software/libc/meson-private/: cmd_line.txt
common_riscv/sipeed_tang_nano_20k/software/picolibc_src/newlib/testsuite/newlib.time/: tzset.c
doc/: fmcos.md  fmcos_en.md  fmcos_user_manual.md
docker/ubuntu-25.04/: Dockerfile
include/: common.h  proxmark4_riscv.h
tools/: pm4_debug.gdb
